--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Non CRA React project Boilerplate Code",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test.js",
     "start": "webpack-dev-server --mode development --hot --open",
     "build": "webpack --mode production"
   },
@@ -18,10 +18,11 @@
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.12.1",
+    "webpack": "^4.13.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
+  "repository": "https://github.com/kishore-devaraj/react-boilerplate",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
