--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "A Non CRA React project Boilerplate Code",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js",
+    "test": "jest",
     "start": "webpack-dev-server --mode development --hot --open",
     "build": "webpack --mode production"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   },
   "author": "Kishore Devaraj",
   "license": "ISC",
@@ -17,6 +22,9 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.3.0",
+    "jest-cli": "^23.3.0",
+    "react-test-renderer": "^16.4.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.13.0",
     "webpack-cli": "^3.0.8",
@@ -27,8 +35,10 @@
     "url": "git+https://github.com/kishore-devaraj/react-boilerplate.git"
   },
   "dependencies": {
+    "babel-jest": "^23.2.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "regenerator-runtime": "^0.12.0"
   },
   "bugs": {
     "url": "https://github.com/kishore-devaraj/react-boilerplate/issues"
